syntax = "proto3";
package stratos.pot.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "stratos/pot/v1/pot.proto";
import "cosmos/base/v1beta1/coin.proto";


option go_package = "github.com/stratosnet/stratos-chain/x/pot/types";

// Msg defines the evm Msg service.
service Msg {
  rpc HandleMsgVolumeReport(MsgVolumeReport) returns (MsgVolumeReportResponse) {
    option (google.api.http).post = "/stratos/pot/v1/volume_report";
  };
  rpc HandleMsgWithdraw(MsgWithdraw) returns (MsgWithdrawResponse) {
    option (google.api.http).post = "/stratos/pot/v1/withdraw";
  };
  rpc HandleMsgLegacyWithdraw(MsgLegacyWithdraw) returns (MsgLegacyWithdrawResponse) {
    option (google.api.http).post = "/stratos/pot/v1/legacy_withdraw";
  };
  rpc HandleMsgFoundationDeposit(MsgFoundationDeposit) returns (MsgFoundationDepositResponse) {
    option (google.api.http).post = "/stratos/pot/v1/foundation_deposit";
  };
  rpc HandleMsgSlashingResourceNode(MsgSlashingResourceNode) returns (MsgSlashingResourceNodeResponse) {
    option (google.api.http).post = "/stratos/pot/v1/slashing_resource_node";
  };
}

// MsgVolumeReport encapsulates an VolumeReport transaction as an SDK message.
message MsgVolumeReport {
  repeated SingleWalletVolume wallet_volumes = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "wallet_volumes",
    (gogoproto.moretags) = "yaml:\"wallet_volumes\""
  ];
  string            reporter = 2 [
    (gogoproto.jsontag) = "reporter",
    (gogoproto.moretags) = "yaml:\"reporter\""
  ];
  string                   epoch        = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "epoch",
    (gogoproto.moretags) = "yaml:\"epoch\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  string                   report_reference = 4 [
    (gogoproto.jsontag) = "report_reference",
    (gogoproto.moretags) = "yaml:\"report_reference\""
  ];
  string                   reporter_owner = 5 [
    (gogoproto.jsontag) = "reporter_owner",
    (gogoproto.moretags) = "yaml:\"reporter_owner\""
  ];
  BLSSignatureInfo         BLS_signature = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "bls_signature",
    (gogoproto.moretags) = "yaml:\"bls_signature\""
  ];
}
// MsgVolumeReportResponse defines the MsgVolumeReport response type
message MsgVolumeReportResponse {}

// MsgWithdraw encapsulates an withdraw transaction as an SDK message.
message MsgWithdraw {
  repeated cosmos.base.v1beta1.Coin amount = 1 [
      (gogoproto.nullable) = false,
      (gogoproto.jsontag)  = "amount",
      (gogoproto.moretags) = "yaml:\"amount\"",
      (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string                         wallet_address = 2 [
    (gogoproto.jsontag) = "wallet_address",
    (gogoproto.moretags) = "yaml:\"wallet_address\""
  ];
  string                         target_address = 3 [
  (gogoproto.jsontag) = "target_address",
  (gogoproto.moretags) = "yaml:\"target_address\""
  ];
}
// MsgWithdrawResponse defines the Msg/MsgWithdraw response type.
message MsgWithdrawResponse {}

// MsgLegacyWithdraw encapsulates an legacyWithdraw transaction as an SDK message.
message MsgLegacyWithdraw {
  repeated cosmos.base.v1beta1.Coin amount = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "amount",
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string                         from = 2 [
    (gogoproto.jsontag) = "from",
    (gogoproto.moretags) = "yaml:\"from\""
  ];
  string                         target_address = 3 [
    (gogoproto.jsontag) = "target_address",
    (gogoproto.moretags) = "yaml:\"target_address\""
  ];
}

// MsgLegacyWithdrawResponse defines the Msg/MsgWithdraw response type.
message MsgLegacyWithdrawResponse {}

// MsgFoundationDeposit - encapsulates an FoundationDeposit transaction as an SDK message
message MsgFoundationDeposit {
  repeated cosmos.base.v1beta1.Coin amount = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "amount",
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string                        from = 2 [
    (gogoproto.jsontag) = "from",
    (gogoproto.moretags) = "yaml:\"from\""
  ];
}
// MsgFoundationDepositResponse defines the MsgFoundationDeposit response type
message MsgFoundationDepositResponse {}


// MsgRemoveMetaNode - encapsulates an MsgRemoveMetaNode transaction as an SDK message
message MsgSlashingResourceNode {
  repeated string reporters = 1 [
    (gogoproto.jsontag) = "reporters",
    (gogoproto.moretags) = "yaml:\"reporters\""
  ];
  repeated string reporter_owner = 2 [
    (gogoproto.jsontag) = "reporter_owner",
    (gogoproto.moretags) = "yaml:\"reporter_owner\""
  ];
  string network_address = 3 [
    (gogoproto.jsontag) = "network_address",
    (gogoproto.moretags) = "yaml:\"network_address\""
  ];
  string wallet_address = 4 [
    (gogoproto.jsontag) = "wallet_address",
    (gogoproto.moretags) = "yaml:\"wallet_address\""
  ];
  string                   slashing        = 5 [
    (gogoproto.jsontag)  = "slashing",
    (gogoproto.moretags) = "yaml:\"slashing\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  bool suspend = 6 [
    (gogoproto.jsontag) = "suspend",
    (gogoproto.moretags) = "yaml:\"suspend\""
  ];
}
// MsgSlashingResourceNodeResponse defines the Msg/MsgSlashingResourceNode response type.
message MsgSlashingResourceNodeResponse {}

message BLSSignatureInfo {
  repeated bytes  pub_keys = 1 [
    (gogoproto.jsontag) = "pub_keys",
    (gogoproto.moretags) = "yaml:\"pub_keys\""
  ];
  bytes           signature = 2 [
    (gogoproto.jsontag) = "signature",
    (gogoproto.moretags) = "yaml:\"signature\""
  ];
  bytes           txData = 3 [
    (gogoproto.jsontag) = "tx_data",
    (gogoproto.moretags) = "yaml:\"tx_data\""
  ];
}

